Update index.html path link

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" href="../favicons/favicon-16x16.png">
-        <link rel="Stylesheet" href="../css/style.css">
+        <link rel="icon" href="favicons/favicon-16x16.png">
+        <link rel="Stylesheet" href="css/style.css">
 
-        <script defer src="../js/script.js"></script>
+        <script defer src="js/script.js"></script>
 
         <title>Pokedex</title>
     </head>
@@ -44,7 +44,7 @@
             <input class="shiny_switch" type="checkbox"/>
 
             <!-- Pokedex Background Image-->
-            <img src="../images/pokedex.png" alt="pokedex" class="pokedex">
+            <img src="images/pokedex.png" alt="pokedex" class="pokedex">
         </main>
     </body>
 </html>
